<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrapper">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollContainer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container"
            android:nestedScrollingEnabled="false">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#FFFFFFFF"
                android:elevation="10dp"
                android:padding="0dp"
                android:translationZ="0dp"
                app:cardBackgroundColor="#FFFFFFFF"
                app:cardCornerRadius="2dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_title_languages"
                            android:theme="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                            android:textStyle="bold"
                            android:layout_marginBottom="10dp" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/settings_phones_lang"
                                android:id="@+id/radioButtonAutomatic"
                                android:textColor="#000000" />

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/settings_serbian"
                                android:id="@+id/radioButtonSerbian"
                                android:textColor="#000000" />

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/settings_hungarian"
                                android:id="@+id/radioButtonHungarian"
                                android:textColor="#000000" />

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/settings_english"
                                android:id="@+id/radioButtonEnglish"
                                android:textColor="#000000" />
                        </RadioGroup>


                    </LinearLayout>
                </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFFFF"
                android:elevation="10dp"
                android:padding="0dp"
                android:translationZ="0dp"
                app:cardBackgroundColor="#FFFFFFFF"
                app:cardCornerRadius="2dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                android:layout_marginTop="-20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_title_general"
                        android:theme="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_auto_zone"
                        android:checked="true"
                        android:textColor="#000000"
                        android:id="@+id/checkBoxAutomaticZone" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_remember_license"
                        android:checked="true"
                        android:textColor="#000000"
                        android:id="@+id/checkBoxRememberLicenseNumber" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFFFF"
                android:elevation="10dp"
                android:padding="0dp"
                android:translationZ="0dp"
                app:cardBackgroundColor="#FFFFFFFF"
                app:cardCornerRadius="2dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                android:layout_marginTop="-20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_title_about"
                        android:theme="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_about_text1"
                        android:id="@+id/textView2"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_about_frontend"
                        android:id="@+id/textView5"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/borsos"
                        android:id="@+id/textView8"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/sebok"
                        android:id="@+id/textView9"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/mark"
                        android:id="@+id/textView10"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_about_backend"
                        android:id="@+id/textView11"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/borsos"
                        android:id="@+id/textView12"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/sebok"
                        android:id="@+id/textView13"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_about_server"
                        android:id="@+id/textView14"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/borsos"
                        android:id="@+id/textView15"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_about_graphics"
                        android:id="@+id/textView21"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/guci"
                        android:id="@+id/textView22"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_about_test"
                        android:id="@+id/textView16"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/feri"
                        android:id="@+id/textView17"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/takacs"
                        android:id="@+id/textView18"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_about_managing"
                        android:id="@+id/textView19"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/andrea"
                        android:id="@+id/textView20"
                        android:textColor="#000000" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>