<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="24.07"
        android:gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/parking_ticket"
            android:id="@+id/textView7"
            android:textColor="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:textSize="24dp"
            android:background="#34ffffff"
            android:paddingRight="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="&lt;zone>"
            android:id="@+id/zoneInfo"
            android:background="#17ffffff"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_alignBottom="@+id/textView25"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/zonePreview"
            android:layout_alignEnd="@+id/zonePreview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="&lt;length>"
            android:id="@+id/lengthInfo"
            android:layout_below="@+id/textView7"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/textView23"
            android:layout_toEndOf="@+id/textView23" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="&lt;end>"
            android:id="@+id/endInfo"
            android:layout_below="@+id/lengthInfo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/textView23"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/textView23" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="&lt;price>"
            android:id="@+id/priceInfo"
            android:background="#34ffffff"
            android:padding="5dp"
            android:gravity="right"
            android:layout_below="@+id/textView25"
            android:layout_alignRight="@+id/textView25"
            android:layout_alignEnd="@+id/textView25"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/zonePreview"
            android:background="#17ffffff"
            android:scaleType="fitCenter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_above="@+id/zoneInfo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/parking_length"
            android:id="@+id/textView23"
            android:layout_alignTop="@+id/zonePreview"
            android:layout_toRightOf="@+id/zonePreview"
            android:layout_toEndOf="@+id/zonePreview"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/valid_due"
            android:id="@+id/textView24"
            android:layout_below="@+id/textView23"
            android:layout_toRightOf="@+id/zonePreview"
            android:layout_toEndOf="@+id/zonePreview"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_comment"
            android:id="@+id/textView25"
            android:layout_marginTop="28dp"
            android:textSize="11dp"
            android:layout_below="@+id/endInfo"
            android:layout_alignLeft="@+id/textView24"
            android:layout_alignStart="@+id/textView24"
            android:paddingBottom="5dp" />

    </RelativeLayout>

</LinearLayout>